tests/baselines/reference/badArrayIndex.errors.txt
tests/cases/compiler/badArrayIndex.ts(1,15): error TS2693: 'number' only refers to a type, but is being used as a value here.
tests/cases/compiler/badArrayIndex.ts(1,22): error TS1109: Expression expected.


==== tests/cases/compiler/badArrayIndex.ts (2 errors) ====
    var results = number[];
                  ~~~~~~
!!! error TS2693: 'number' only refers to a type, but is being used as a value here.
                         ~
!!! error TS1109: Expression expected.